--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ jobs:
         with:
           crate: wof
           features: cli
-      - run: ls -al $(pwd)/data && wof build sqlite --no-deprecated --preset pelias --out whosonfirst-data-admin-de-latest.db $(pwd)/data
+      - run: wof build sqlite --no-deprecated --preset pelias --out whosonfirst-data-admin-de-latest.db 
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Build WoF db on commit \"${{ github.event.head_commit.message }}\""
