--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,9 +8,9 @@ jobs:
       - uses: baptiste0928/cargo-install@v3
         with:
           crate: wof
-          features: cli
+          features: cli with-gdal
           locked: false
-      - run: wof build sqlite --no-deprecated --preset pelias --out whosonfirst-data-admin-de-latest.db 
+      - run: wof build sqlite -v --no-deprecated --preset pelias --out whosonfirst-data-admin-de-latest.db 
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Build WoF db on commit \"${{ github.event.head_commit.message }}\""
