--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,9 @@ jobs:
       - name: Run wof build
         shell: 'script -q -e -c "bash {0}"'
         run: wof build sqlite -v --no-deprecated --preset pelias --out whosonfirst-data-admin-de-latest.db data
-          
-      - uses: stefanzweifel/git-auto-commit-action@v5
+      - name: Create a Release
+        uses: elgohr/Github-Release-Action@v5
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          commit_message: "Build WoF db on commit \"${{ github.event.head_commit.message }}\""
+          title: Build WoF db on commit \"${{ github.event.head_commit.message }}\"
