--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,8 +14,6 @@ jobs:
         shell: 'script -q -e -c "bash {0}"'
         run: wof build sqlite -v --no-deprecated --preset pelias --out whosonfirst-data-admin-de-latest.db data
       - name: Create a Release
-        uses: elgohr/Github-Release-Action@v5
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          title: Build WoF db on commit \"${{ github.event.head_commit.message }}\"
+         artifacts: "whosonfirst-data-admin-de-latest.db"
